# new_version_of_mining_security

./: .dockerignore  .dockerignore_1  .env.example  .env_1.example  .gitignore  .gitignore_1  ARCHITECTURE_AUDIT.md  ARCHITECTURE_AUDIT_1.md  CLAUDE.md  DEPLOY.md  DEPLOY_1.md  Dockerfile  KNOWLEDGE_BASE.md  README.md  README_1.md  _check_columns.py  check_catalog.ps1  check_socket.py  check_winsock.py  check_winsock2.py  check_winsock3.py  check_winsock_final.py  config.yaml  config_1.yaml  docker-compose.yml  docker-compose_1.yml  fake_overlapped.py  generate_visualizations.py  named_pipe_api.py  net_test.py  pyproject.toml  requirements-api.txt  requirements-common.txt  requirements-deploy-rag.txt  requirements-deploy.txt  requirements-dev_1.txt  requirements-full.txt  requirements-full_1.txt  requirements-legacy-frontend_1.txt  requirements-ml.txt  (+38 more)
agent/: __init__.py  workflow.py  workflow_1.py
api/: main.py  main_1.py  security_1.py
datasets/: README.md  manifest.yaml  region_code_map.json
docs/: PIPELINE.md
frontend/: .dockerignore  .env.example  .gitignore_1  Dockerfile  Dockerfile_1  README.md  README_1.md  app_legacy_streamlit.py  app_legacy_streamlit_1.py  demo_data_1.py  index.html  nginx.conf  nginx_1.conf  package-lock.json  package.json  tsconfig.json  tsconfig.node_1.json  tsconfig_1.json  vite.config.ts
harness/: agentfs_1.py  knowledge_base_1.py  memory.py  memory_1.py  memory_statistics.py  model_iteration.py  monte_carlo_1.py  nlp_pipeline_1.py  proposer_1.py  reranker.py  reranker_1.py  risk_assessment.py  rks.py  validation.py  validation_1.py  (+2 more)
(+835 files in other folders)
